Fix CSS loading - consolidate all styles into single file

--- a/design-system/index.html
+++ b/design-system/index.html
@@ -5,15 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>KodNest Premium Build System - Design System</title>
   
-  <link rel="stylesheet" href="styles/global.css">
-  <link rel="stylesheet" href="layouts/top-bar.css">
-  <link rel="stylesheet" href="layouts/context-header.css">
-  <link rel="stylesheet" href="layouts/workspace.css">
-  <link rel="stylesheet" href="layouts/proof-footer.css">
-  <link rel="stylesheet" href="components/buttons.css">
-  <link rel="stylesheet" href="components/cards.css">
-  <link rel="stylesheet" href="components/inputs.css">
-  <link rel="stylesheet" href="components/states.css">
+  <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
   
